Updated language switcher save background. Changed slider gap from fixed to percentage value

--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -79,6 +79,7 @@ body{
                                 padding: 7px 25px;
                                 border: none;
                                 cursor: pointer;
+                                background: #70FFD4;
                             }
 
                             .arrow-up{
